c++语言标识改为cpp

--- a/docs/PAT练习/PAT1001.md
+++ b/docs/PAT练习/PAT1001.md
@@ -28,14 +28,14 @@ tags:
 
 控制输出的格式
 
-```c++
+```cpp
 cout.fill('0');		// 使用字符'0'来填充
 cout.width(3);		// 设置输出的宽度为3，在输出一次后失效
 ```
 
 ## Solution
 
-```c++
+```cpp
 #include <iostream>
 
 using namespace std;
