--- a/docs/PAT练习/PAT1003.md
+++ b/docs/PAT练习/PAT1003.md
@@ -30,7 +30,7 @@ tags:
 
 自定义排序：
 
-```c++
+```cpp
 #include <algorithm>
 
 bool myCompare(int a, int b) {
@@ -42,7 +42,7 @@ sort(v.begin(), v.end(), myCompare);  // 使用开始和末尾的迭代器以及
 
 ## My Solution
 
-```c++
+```cpp
 #include <iostream>
 #include <vector>
 #include <algorithm>
