--- a/docs/PAT练习/PAT1004.md
+++ b/docs/PAT练习/PAT1004.md
@@ -38,7 +38,7 @@ tags:
 
 C++中队列的操作：
 
-```c++
+```cpp
 #include <queue>
 
 q.push();		// 队尾入队
@@ -50,7 +50,7 @@ q.back();		// 获取最后一个元素
 
 ## Solution
 
-```c++
+```cpp
 #include <iostream>
 #include <queue>
 #include <vector>
